--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,3 +1,6 @@
 <link rel="stylesheet" href="/css/user_profile.css">
 
         <h1>codeial / Profile page </h1>
+
+        <p>Name: <%= user.name %></p>
+        <p>Email: <%= user.email %></p>
